#
# Top level Makefile for enscript.
# Copyright (c) 1995-1999 Markku Rossi
#
# Author: Markku Rossi <mtr@iki.fi>
#

#
# This file is part of GNU Enscript.
#
# Enscript is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Enscript is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Enscript.  If not, see <http://www.gnu.org/licenses/>.
#

SUBDIRS = intl compat afm afmlib lib scripts src po states docs w32

EXTRA_DIST = README.ESCAPES README.DOS ascii.txt			\
asciifise.txt asciidkno.txt 88591.txt 88592.txt 88593.txt 88594.txt	\
88595.txt 88597.txt 88599.txt 885910.txt ibmpc.txt mac.txt vms.txt	\
hp8.txt koi8.txt mtr.eps mtr_small.eps mtr_tiny.eps po/ChangeLog.old

ACLOCAL_AMFLAGS = -I m4
