#
# Automakefile for the AFM files.
# Copyright (c) 1995-1999 Markku Rossi
#
# Author: Markku Rossi <mtr@iki.fi>
#

#
# This file is part of GNU Enscript.
#
# Enscript is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Enscript is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Enscript.  If not, see <http://www.gnu.org/licenses/>.
#

default_afm = agd.afm agdo.afm agw.afm agwo.afm bkd.afm bkdi.afm	\
bkl.afm bkli.afm cob.afm cobo.afm com.afm coo.afm hv.afm hvb.afm	\
hvbo.afm hvc.afm hvcb.afm hvcbo.afm hvcdo.afm hvn.afm hvnb.afm		\
hvnbo.afm hvno.afm hvo.afm ncb.afm ncbi.afm nci.afm ncr.afm pob.afm	\
pobi.afm poi.afm por.afm sy.afm tib.afm tibi.afm tii.afm tir.afm	\
zcmi.afm zd.afm

public_fonts = matrix.afm matrix.pfa

afmdir = $(pkgdatadir)/afm
dist_afm_DATA = font.map $(default_afm) $(public_fonts) MustRead.html

EXTRA_DIST = ChangeLog.old
